fixed right aligned menu padding.

--- a/src/assets/scss/boldgrid/navigation/_base.scss
+++ b/src/assets/scss/boldgrid/navigation/_base.scss
@@ -159,7 +159,7 @@
 			.sm-clean.ne,
 			.sm-clean.se {
 				&:not( .sm-vertical ) {
-					li:first-of-type a {
+					li:last-of-type a {
 						padding-right: 0px;
 					}
 				}
